fixing scrollbar and making it stable both side

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,5 +80,15 @@ body {
 }
 
 .scrollbar-color {
-    scrollbar-color: hsla(var(--foreground)) hsl(var(--background));
+    scrollbar-color: hsla(var(--foreground)/0.4) hsl(var(--background));
+    scrollbar-gutter: stable both-edges;
+}
+.scrollbar-color:hover {
+    scrollbar-color: hsla(var(--foreground)/0.8) hsl(var(--background));
+    scrollbar-gutter: stable both-edges;
+}
+@supports not (scrollbar-gutter: stable both-edges) {
+    .scrollbar-color {
+        padding-left: 2rem;
+    }
 }
